_Source/force-app/main/default/objects/SIP_Airport__c/SIP_Airport__c.object-meta.xml
<CustomObject>
    <description>store the info of airports</description>
    <label>Airport</label>
    <nameField>
        <label>Airport Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Airports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>