_Source/force-app/main/default/objects/SIP_Airport__c/fields/SIP_Airport_Code__c.field-meta.xml
<CustomField>
    <fullName>SIP_Airport_Code__c</fullName>
    <description>3 letters airport code</description>
    <externalId>true</externalId>
    <label>Airport Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>