_Source/force-app/main/default/objects/SIP_Airport__c/fields/SIP_Airport_Info__c.field-meta.xml
<CustomField>
    <fullName>SIP_Airport_Info__c</fullName>
    <formula>&apos; (&apos; + SIP_Airport_Code__c + &apos;) &apos; + Name + &apos;, &apos; + IF(SIP_State_Code__c == NULL || SIP_State_Code__c ==&apos;&apos;, &apos;&apos;,SIP_State_Code__c + &apos;, &apos;) + SIP_Country_Code__c</formula>
    <label>Airport Info</label>
    <type>Text</type>
</CustomField>