_Source/force-app/main/default/objects/SIP_Airport__c/fields/SIP_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>SIP_Country_Code__c</fullName>
    <description>country code of airport</description>
    <label>Country Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>