_Source/force-app/main/default/objects/SIP_Airport__c/fields/SIP_State_Code__c.field-meta.xml
<CustomField>
    <fullName>SIP_State_Code__c</fullName>
    <description>state code of airport</description>
    <label>State Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>