_Source/force-app/main/default/objects/SIP_Airport__c/fields/Sip_UnitedMeetingAirport__c.field-meta.xml
<CustomField>
    <fullName>Sip_UnitedMeetingAirport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>United Meetings Airport</label>
    <type>Checkbox</type>
</CustomField>