_Source/force-app/main/default/objects/SIP_Airport__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SIP_Airport_Code__c</columns>
    <columns>SIP_State_Code__c</columns>
    <columns>SIP_Country_Code__c</columns>
    <columns>SIP_Airport_Info__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>