_Source/force-app/main/default/objects/SIP_Airport__c/listViews/United_Meetings_Airport.listView-meta.xml
<ListView>
    <fullName>United_Meetings_Airport</fullName>
    <columns>NAME</columns>
    <columns>SIP_Airport_Code__c</columns>
    <columns>SIP_State_Code__c</columns>
    <columns>SIP_Country_Code__c</columns>
    <columns>SIP_Airport_Info__c</columns>
    <columns>Sip_UnitedMeetingAirport__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sip_UnitedMeetingAirport__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>United Meetings Airport</label>
</ListView>